overflow ui issu fixed

--- a/components/modal/ModalComponent.module.css
+++ b/components/modal/ModalComponent.module.css
@@ -2,16 +2,30 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    /* width: 100%;
     height: 100%;
-    height: 100dvh;
+    height: 100dvh; */
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.25);
     z-index: 100;
     display: grid;
     justify-content: center;
     align-items: center;
     animation: outerAnimation 0.4s ease-out forwards;
+    overflow-y: scroll;
+}
 
+.outer::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.outer {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 .inner {
@@ -24,11 +38,12 @@
     margin: 1rem;
 
     border: 0px;
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
     text-align: center;
     animation: innerAnimation 0.4s ease-out forwards;
     background-color: rgb(255, 255, 255);
     z-index: 200;
+    /* overflow: scroll; */
 
 }
 
